Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22418

mysqladmin wrong error with simple_password_check

    XMLWordPrintable

Details

    Description

      If you try too simple a password with mysqladmin, you get the wrong error message:

      [root@mg-m103 ~]# mysqladmin password -p
      Enter password:
      New password:
      Confirm new password:
      [root@mg-m103 ~]#

      [root@mg-m103 ~]# mysql -Ap <<< "INSTALL SONAME 'simple_password_check'"
      Enter password:
      [root@mg-m103 ~]# mysqladmin password -p
      Enter password:
      New password:
      Confirm new password:
      mysqladmin:
      You cannot use 'password' command as mysqld runs
      with grant tables disabled (was started with --skip-grant-tables).
      Use: "mysqladmin flush-privileges password '*'" instead

      The server sends the correct message:

      recvfrom(3, "w\0\0\1\377\n\5#HY000The MariaDB server is running with the --strict-password-validation option so it cannot execute this statement", 16384, MSG_DONTWAIT, NULL, NULL) = 123

      Attachments

        Activity

          People

            danblack Daniel Black
            mg MG
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 40m
                40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.